--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-discord.py==1.3.3
-requests==2.23.0
-cairosvg==2.4.2
-discord==1.0.1
-google_api_python_client==1.8.3
-numpy==1.18.4
-Pillow==7.1.2
-simplejson==3.17.0
-tinydb==4.1.1
+discord.py>=1.5.1
+requests==2.7.0
+cairosvg==2.5.0
+discord>=1.0.1
+google_api_python_client>=1.12.8
+numpy==1.19.3
+Pillow==8.0.1
+simplejson==3.17.2
+tinydb==4.3.0
 untangle==1.1.1
+cleverbot==2.0.0
+colormath==3.0.0
