Updated gitignore. Added Cleverbot key

--- a/keys.txt.template
+++ b/keys.txt.template
@@ -1,5 +1,6 @@
-googleKey= XXX
-ownerID= XXX
-avwxKey= XXX
-token= XXX
-url= XXX
+googleKey=XXX
+ownerID=XXX
+avwxKey=XXX
+token=XXX
+url=XXX
+cleverbot=XXX
